script para aceitar ponto para separar centavos e depois formatar no formato brasileiro.

--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ImportarCarga.cshtml
@@ -58,7 +58,7 @@
             <div class="col-24 col-sm-12 col-xl-6">
                 <div class="form-group">
                     <label for="valorNfe" class="form-label">Valor da NF-e</label>
-                    <input type="text" class="form-control" id="valorNfe" name="ValorNfeFormatado" data-thousands="." data-decimal="," data-prefix="R$ " placeholder="R$ 9.999,99" maxlength="13" />
+                    <input type="text" class="form-control" id="valorNfe" name="ValorNfeFormatado"  placeholder="R$ 9.999,99" maxlength="13" />
                 </div>
             </div>
             <div class="col-24 col-sm-12 col-xl-6">
@@ -164,7 +164,7 @@
                     <div class="col-24 col-sm-12 col-md-8 col-lg-7 col-xl-6">
                         <div class="form-group">
                             <label for="valorNfeVariosContainer" class="form-label">Valor da NF-e</label>
-                            <input type="text" class="form-control" id="valorNfeVariosContainer" name="ValorNfe" data-thousands="." data-decimal="," data-prefix="R$ " placeholder="R$ 9.999,99" maxlength="13" />
+                            <input type="text" class="form-control" id="valorNfeVariosContainer" name="ValorNfe" placeholder="R$ 9.999,99" maxlength="13" />
                         </div>
                     </div>
                     <div class="col-24 col-md-8 col-lg-10 col-xl-8" id="divNfVariosContainerAnexo">
