--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportar.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptImportar.cshtml
@@ -16,6 +16,9 @@
 <script src="@baseUrl/js/plugins/jquery.validate/additional-methods.min.js"></script>
 
 <script type="text/javascript">
+
+    
+
     $(document).ready(function () {
         Inicializar();
 
@@ -244,8 +247,8 @@
         $("#divSalvar").show();
         $("#divCarga").hide();
 
-        $("#valorNfe").maskMoney();
-        $("#valorNfeVariosContainer").maskMoney();
+        //$("#valorNfe").maskMoney();
+        //$("#valorNfeVariosContainer").maskMoney();
         $("#divRegistrosCargas").hide();
         $(".sucessoJQ").hide();
         //$(".btnAgendarJQ").hide();
