--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ExportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ExportarCarga.cshtml
@@ -7,6 +7,7 @@
 <form class="form" id="FormCarga">
     <div class="form-section" id="divCarga">
         <h3 class="form-section__title">@T("Informações de Carga")</h3>
+        <input type="hidden" name="Chave" id="Chave" value="@Guid.NewGuid()" />
         <div class="row justify-content-center">
             <div class="col-24 col-xl-18">
                 <div class="row">
@@ -43,13 +44,13 @@
                             </select>
                         </div>
                     </div>
-                    <div class="col-8 col-sm-12 col-md-4 col-lg-4 col-xl-4 d-flex align-items-end form-top-btn">
+                    @*<div class="col-8 col-sm-12 col-md-4 col-lg-4 col-xl-4 d-flex align-items-end form-top-btn">
                         <div class="form-group">
                             <label for="" class="form-check">@T("Reefer")
                                 <input type="checkbox" id="Reefer" name="Reefer"><span class="checkmark"></span>
                             </label>
                         </div>
-                    </div>
+                    </div>*@
                     <div class="col-24">
                         <div class="form-group">
                             <label for="" class="form-label">@T("Comentario")</label>
