--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportarCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/ScriptExportarCarga.cshtml
@@ -55,7 +55,7 @@
                         DataColeta: $("#DataColeta").val(),
                         Peso: $("#Peso").val(),
                         Equipamento: $("#Equipamento").val(),
-                        Reefer: $("#Reefer").is(':checked'),
+                        Chave: $("#Chave").val(),
                         Comentario: $("#Comentario").val(),
                         CodigoExportacao: $("#CodigoExportar").val()
                     },
@@ -67,7 +67,7 @@
                             $("#Comentario").val('');
                             $("#DataColeta").val('');
                             $("#Equipamento").val('');
-                            $("#Reefer").prop('checked', false);
+                            //$("#Reefer").prop('checked', false);
                             $(".btnAgendarJQ").fadeIn("slide");
                         }
                         else {
@@ -92,7 +92,7 @@
         $("#divRegistrosCargas").fadeIn("slide");
 
         var reefer = "";
-        if (model.Reefer == true) {
+        if (model.Equipamento == "20RF" || model.Equipamento == "40RH") {
             reefer = " <span class='icon icon-snow'></span>";
         }
 
@@ -102,7 +102,7 @@
                             "<td>" + model.Equipamento + reefer + "</td>" +
                             "<td>" + model.DataColetaFormatada + "</td>" +
                             "<td>" + model.Peso + " kgs" + "</td>" +
-            "<td><span class='icon icon-coments' data-toggle='tooltip' data-placement='top' title='" + (model.Comentario == null ? '' : model.Comentario) + "'></span> <span title='" + (model.Comentario == null ? '' : model.Comentario) + "'>Comentários</span></td>" +
+                            "<td><span class='icon icon-coments " + (model.Comentario == null ? 'disabled' : '') + "' data-toggle='tooltip' data-placement='top' title='" + (model.Comentario == null ? '' : model.Comentario) + "'></span> <span title='" + (model.Comentario == null ? '' : model.Comentario) + "'>Comentários</span></td>" +
                             "<td><a href='#modalConfirmacao' data-toggle='modal'  onClick='excluirCarga(" + model.Codigo + ")' href='javascript:void(0)' class='icon icon-delete'><span class='sr-only'>Delete</span></a></td>" +
                         "</tr>";
 
@@ -117,14 +117,14 @@
         $("#CodigoExcluir").val(codigo);
     }
 
-    $(".checkmark").on("click", function () {
-        if ($("#Reefer").is(":checked")) {
-            $("#Reefer").prop('checked', false);
-        }
-        else {
-            $("#Reefer").prop('checked', true);
-        }
-    });
+    //$(".checkmark").on("click", function () {
+    //    if ($("#Reefer").is(":checked")) {
+    //        $("#Reefer").prop('checked', false);
+    //    }
+    //    else {
+    //        $("#Reefer").prop('checked', true);
+    //    }
+    //});
 
     $(".btnExcluirJQ").on("click", function () {
         $.ajax({
