Tratativa para impedir edição de arquivo apos agendamento do container

--- a/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Importar.cshtml
+++ b/CMSv4/Areas/Modulo/Views/AgendamentoIntermodal/Importar.cshtml
@@ -76,7 +76,7 @@
                             <span class="icon icon-paperclip"></span>
                             @T("Declaração de Importação")
                         </label>
-                        <div id="arquivoDeclaracaoImportacao" class="dropzone">
+                        <div id="arquivoDeclaracaoImportacao" class="dropzone dropExcluirJq">
                             <div class="fallback">
                                 <input type="file" name="fileDeclaracaoImportacao" id="fileDeclaracaoImportacao" />
                             </div>
@@ -92,7 +92,7 @@
                             <span class="icon icon-paperclip"></span>
                             GARE <small>@T("(Guia de Arrecadação de Receitas Estaduais)")</small>
                         </label>
-                        <div id="arquivoGuiaArrecadacao" class="dropzone">
+                        <div id="arquivoGuiaArrecadacao" class="dropzone dropExcluirJq">
                             <div class="fallback">
                                 <input type="file" name="fileGuiaArrecadacao" id="fileGuiaArrecadacao" />
                             </div>
@@ -108,7 +108,7 @@
                             <span class="icon icon-paperclip"></span>
                             BL
                         </label>
-                        <div id="arquivoBl" class="dropzone">
+                        <div id="arquivoBl" class="dropzone dropExcluirJq">
                             <div class="fallback">
                                 <input type="file" name="fileBl" id="fileBl" />
                             </div>
